--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 </head>
 <body>
 <!-- HEADER -->
-	<header >
-		<div class="d-flex flex-column justify-content-between flex-md-row align-items-center">
-			<a href="index.html"><img id="logo" class="d-none d-lg-flex" src="media/logo.jpg" alt="logo" title="asd"></a>
-			<nav class="navbar navbar-expand-lg navbar-light ">
+	<header>
+		<div id="menu" class="d-flex flex-column justify-content-around flex-md-row align-items-center">
+			<a href="index.html"><img id="logo" src="media/logo.jpg" alt="AceitesCBD" title="AceitesCBD"></a>
+			<nav class="navbar navbar-expand-lg navbar-light">
 				<button class="m-auto navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 	<span class="navbar-toggler-icon"></span>
                 </button>
 				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="miNavbar navbar-nav type-regular type-sm">
-                        <li class="nav-item text-center"><a class="nav-link" href="#"><i class="flaticon-letter" title="Productos"> Productos</i></a></li>
-                        <li class="nav-item text-center"><a class="nav-link" href="#"><i class="flaticon-letter" title="Sobre el CBD"> Sobre el CBD</i></a></li>
-						<li class="nav-item text-center"><a class="nav-link" href="#"><i class="flaticon-marcador-de-posicion" title="Contacto"> Contacto</i></a></li>
-						<li class="nav-item text-center"><a class="nav-link" href="#" target="_blank" title="..." rel="noreferrer"><i class="flaticon-instagram-2"> Insta</i></a></li>
+					<ul class="miNavbar navbar-nav type-bold type-sm">
+                        <li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#">Productos</a></li>
+                        <li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#">Sobre el CBD</a></li>
+						<li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#">Contacto</a></li>
+						<li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#" target="_blank" title="..." rel="noreferrer"><i class="flaticon-instagram-2 type-md"></i></a></li>
 					</ul>
 				</div>
 			</nav>
@@ -39,81 +39,48 @@
 	<section class="p-1">
 
 <!-- Exibidor de Productos -->
-		<div id="containerPromos" class="row justify-content-between"></div>
-
-<!-- CARRUSEL -->
-		<!-- <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img class="d-block w-100" src="media/info1.jpg" alt="...">
-					<div class="carousel-caption d-none d-md-block">
-					  <h5>#asdasd</h5>
-					  <p>#asdasd</p>
-					</div>
-				  </div>
-				  <div class="carousel-item">
-					<img class="d-block w-100" src="media/info2.jpg" alt="...">
-					<div class="carousel-caption d-none d-md-block">
-					  <h5>#asdasd</h5>
-					  <p>#asdasd</p>
-					</div>
-				  </div>
-			  <div class="carousel-item">
-				<img class="d-block w-100" src="media/info1.jpg" alt="...">
-				<div class="carousel-caption d-none d-md-block">
-				  <h5>#asdasd</h5>
-				  <p>#asdasd</p>
-				</div>
-			  </div>
-			</div>
-			<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Anterior</span>
-			</a>
-			<a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Siguiente</span>
-			</a>
-		  </div> -->
+		<div class="containerPromos mb-5 text-center">
+			<div id="exibidorProductos" class="row  justify-content-around mb-3"></div>
+			<a href="productos.html" class=" text-uppercase type-bold color-white miBoton">Ver todos</a>
+		</div>
 
 <!-- INFORMACION -->
-		<div class="containerAcerca m-1 p-1 d-flex flex-wrap">
-            <div class="containerInfo m-auto pl-4 col-11 col-lg-6">
-                <h6 class="text-center type-bold type-lg">Informacion1</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis numquam sint pariatur</p>
-                <ul>
-                    <li>Es un material que <strong> no se oscurece, ni se oxida</strong> con el tiempo.</li>
-                    <li>Es <strong>antialérgico</strong>, en rarisimas ocaciones causa alergías.</li>
-                    <li>Es un material <strong>duro y resistente</strong>, que no se deforma facilmente.</li>
-                    <li>A pesar de su dureza es posible realizar <strong>grabados personalizados</strong>.</li>
-                    <li>A diferencia de otros materiales es <strong>economico</strong>.</li>
-                    <li><strong> Facil de limpiar</strong>, con un simple paño quedara reluciente.</li>
-                </ul>
-            </div>
-			<div class="p-2 m-auto col-11 m-lg-0 col-lg-6">
-                <img width="400px" src="../media/infoMobile1.jpg" srcset="../media/infoMobile1.jpg 768w, ../media/info1.jpg" alt="#" title="#">
-			</div>
+<div class="containerInformacion Bg-ColorBgGreen mb-5">
+	<div class="containerAcerca m-1 p-1 d-flex flex-wrap Bg-ColorBgGreen">
+		<div class="containerInfo m-auto pl-4 col-11 col-lg-6">
+			<h6 class="text-center type-bold type-lg">¿Qué es el CBD?</h6>
+			<p>El CBD es una sustancia natural presente en la planta Cannabis Sativa. Se utiliza en la producción de aceites, cremas y comestibles.</p>
 		</div>
-        <div class="containerAcerca m-1 mt-5 p-1 d-flex flex-wrap">
-            <div class="containerInfo m-auto pl-4 col-11 col-lg-6 order-lg-2">
-                <h6 class="text-center type-bold type-lg">Informacion2</h6>
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio minima ad ipsam laudantium quaerat veritatis velit eos? Sint iste sit aliquid eius, dolores odit. Reprehenderit blanditiis voluptatibus fugiat consequatur ipsam?
-				</p>
-            </div>
-			<div class="p-1 m-auto col-11 m-lg-0 col-lg-6">
-                <img width="400px" src="../media/infoMobile2.jpg" srcset="../media/infoMobile2.jpg 768w, ../media/info2.jpg" alt="#" title="#">
-			</div>
+		<div class="p-2 m-auto col-11 m-lg-0 col-lg-6">
+			<img src="../media/infoMobile1.jpg" srcset="../media/infoMobile1.jpg 768w, ../media/info1.jpg" alt="#" title="#">
 		</div>
+	</div>
+	<div class="containerAcerca m-1 mt-5 p-1 d-flex flex-wrap Bg-ColorBgGreen">
+		<div class="containerInfo m-auto pl-4 col-11 col-lg-6 order-lg-2">
+			<h6 class="text-center type-bold type-lg">¿Por qué CBD?</h6>
+			<p>El CBD posee múltiples beneficios para el organismo.</p>
+		</div>
+		<div class="p-1 m-auto col-11 m-lg-0 col-lg-6">
+			<img src="../media/infoMobile2.jpg" srcset="../media/infoMobile2.jpg 768w, ../media/info2.jpg" alt="#" title="#">
+		</div>
+	</div>
+</div>
+
+<!-- Recomendaciones -->
+
+<div  class="Bg-ColorBgGreen ">
+	Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore mollitia veritatis odio accusamus ipsum architecto, amet dignissimos? Ut, voluptatum sequi voluptatibus ex, magnam suscipit molestiae obcaecati sit ducimus facilis quae?	
+
+</div>
+
 <!-- Contacto -->
-		<div class="containerContactanos m-1 p-3 d-flex flex-wrap text-center">
+		<div class="containerContactanos m-1 p-3 d-flex flex-wrap text-center Bg-ColorBgGreen">
 			<div class="m-auto p-1 col-11 m-lg-0 col-lg-6 order-1">
 				<form class="col-12 needs-validation" method="POST" action="email.php" novalidate>
 					<div>
 						<div class="form-group text-center">
 							<label for="nombre">Nombre:</label>
 							<input class="form-control border border-dark" type="text" placeholder="Tu nombre" id="nombre" required>
-					
 						</div>
 						<div class="form-group">
 							<label for="correo">Correo:</label>
@@ -126,10 +93,10 @@
 						</div>
 					</div>
 					<div class="col-12">
-						<button class="btn border border-dark botonModal" type="submit" data-toggle="modal" data-target="#exampleModal">Enviar</button>
+						<button class="btn border border-dark miBoton" type="submit" data-toggle="modal" data-target="#exampleModal">Enviar</button>
 					</div>
 					<div>
-						<button type="button" class="btn border border-dark botonModal" data-toggle="modal" data-target="#exampleModal">Enviar</button>
+						<button type="button" class="btn border border-dark miBoton" data-toggle="modal" data-target="#exampleModal">Enviar</button>
 					</div>
 				</form>			
 			</div>
@@ -138,6 +105,7 @@
 				<i class="flaticon-letter"> EmailDeContacto@gmail.com</i>
 			</div>
 		</div>
+
 <!-- Modal -->
 		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
