Agregado de stock

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 </button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="miNavbar navbar-nav type-bold type-sm">
-                        <li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#">Productos</a></li>
-                        <li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#">Sobre el CBD</a></li>
-						<li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#">Contacto</a></li>
-						<li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#" target="_blank" title="..." rel="noreferrer"><i class="flaticon-instagram-2 type-md"></i></a></li>
+                        <li class="nav-item text-center pl-lg-5"><a class="nav-link" href="productos.html">Productos</a></li>
+                        <li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#informacion">Sobre el CBD</a></li>
+						<li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#contacto">Contacto</a></li>
+						<li class="nav-item text-center pl-lg-5"><a class="nav-link" href="https://www.instagram.com/aceitesroyal.cbd/?hl=es-la" target="_blank" title="Aceites CBD" rel="noreferrer"><i class="flaticon-instagram-2 type-md"></i></a></li>
 					</ul>
 				</div>
 			</nav>
@@ -45,7 +45,7 @@
 		</div>
 
 <!-- INFORMACION -->
-<div class="containerInformacion Bg-ColorBgGreen mb-5">
+<div id="informacion" class="containerInformacion Bg-ColorBgGreen mb-5">
 	<div class="containerAcerca m-1 p-1 d-flex flex-wrap Bg-ColorBgGreen">
 		<div class="containerInfo m-auto pl-4 col-11 col-lg-6">
 			<h6 class="text-center type-bold type-lg">¿Qué es el CBD?</h6>
@@ -74,7 +74,7 @@
 </div>
 
 <!-- Contacto -->
-		<div class="containerContactanos m-1 p-3 d-flex flex-wrap text-center Bg-ColorBgGreen">
+		<div id="contacto" class="containerContactanos m-1 p-3 d-flex flex-wrap text-center Bg-ColorBgGreen">
 			<div class="m-auto p-1 col-11 m-lg-0 col-lg-6 order-1">
 				<form class="col-12 needs-validation" method="POST" action="email.php" novalidate>
 					<div>
@@ -102,7 +102,7 @@
 			</div>
 			<div class="containerInfo m-auto col-11 col-lg-6 order-2">
 				<p class="">No te quedes con las dudas, déjanos tu mensaje.</p>
-				<i class="flaticon-letter"> EmailDeContacto@gmail.com</i>
+				<i class="flaticon-letter"> aceitesterapeuticosroyal@gmail.com</i>
 			</div>
 		</div>
 
