--- a/index.html
+++ b/index.html
@@ -8,122 +8,271 @@
 <!-- Animate -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 <!-- Icons -->
-    <link rel="stylesheet" type="text/css" href="font/flaticon.css"> 
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 <!-- Boostrap -->
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 <!-- Estilos -->
 	<link rel="stylesheet" href="css/estilos.css">
+	<!--OPEN GRAPH-->
+    <meta property="og:tittle" content="Aceites Medicinales Royal CBD - Revendedores oficiales">
+    <meta property="og:image" content="https://i.ibb.co/sCqzcqC/logo-aceites.png">
+    <meta property="og:image:height" content="200px">
+    <meta property="og:image:widht" content="200px">
+    <meta property="og:description" content="Aceites Royal CBD - Revendedores oficiales en Capital Federal">
+
     <title>Aceites CBD</title>
 </head>
 <body>
 <!-- HEADER -->
 	<header>
 		<div id="menu" class="d-flex flex-column justify-content-around flex-md-row align-items-center">
-			<a href="index.html"><img id="logo" src="media/logo.jpg" alt="AceitesCBD" title="AceitesCBD"></a>
+			<a href="index.html"><img class="logo" src="media/logo.jpg" alt="AceitesCBD" title="AceitesCBD"></a>
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<button class="m-auto navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 	<span class="navbar-toggler-icon"></span>
                 </button>
 				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="miNavbar navbar-nav type-bold type-sm">
+					<ul class="miNavbar navbar-nav type-bold type-sm text-uppercase">
                         <li class="nav-item text-center pl-lg-5"><a class="nav-link" href="productos.html">Productos</a></li>
                         <li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#informacion">Sobre el CBD</a></li>
 						<li class="nav-item text-center pl-lg-5"><a class="nav-link" href="#contacto">Contacto</a></li>
-						<li class="nav-item text-center pl-lg-5"><a class="nav-link" href="https://www.instagram.com/aceitesroyal.cbd/?hl=es-la" target="_blank" title="Aceites CBD" rel="noreferrer"><i class="flaticon-instagram-2 type-md"></i></a></li>
+						<li class="nav-item text-center pl-lg-5"><a class="nav-link" href="https://www.instagram.com/aceitesroyal.cbd/?hl=es-la" target="_blank" title="Aceites CBD" rel="noreferrer"><i class="fab fa-instagram type-md"></i></a></li>
 					</ul>
 				</div>
 			</nav>
 		</div>
 	</header>   
 <!-- SECTION -->
-	<section class="p-1">
+	<section class="container p-1">
 
 <!-- Exibidor de Productos -->
 		<div class="containerPromos mb-5 text-center">
 			<div id="exibidorProductos" class="row  justify-content-around mb-3"></div>
-			<a href="productos.html" class=" text-uppercase type-bold color-white miBoton">Ver todos</a>
+			<div class="w-100 col-12 d-flex justify-content-center">
+				<button class="btn border border-dark miBoton" type="submit" data-toggle="modal" data-target="#exampleModal">VER LISTA DE PRECIOS
+					<a href="https://docs.google.com/document/d/1wbkMm2IE92D5BCwvFhGNzsxhf6XtSofC8OpyTogJLT0/edit?usp=sharing"></a>
+				</button>
+			</div>
 		</div>
+
+<!-- INFORMACION MIA-->
+		<!-- <div class="cbd-container Bg-ColorBgGreen">
+			<div class="m-1 p-1 d-flex flex-wrap Bg-ColorBgGreen">
+				<div class="p-2 m-auto col-11 m-lg-0 col-lg-5">
+					<img src="media/infoMobile1.jpg" srcset="media/infoMobile1.jpg 768w, media/info1.jpg" alt="Aceite informacion" title="Aceite informacion">
+				</div>
+				<div class="cbd-section-container m-auto pl-4 col-11 col-lg-5">
+					<h6 class="type-bold type-lg">¿Qué es el CBD?</h6>
+					<p class="cbd-text">El CBD es una sustancia natural presente en la planta Cannabis Sativa. Se utiliza en la producción de aceites, cremas y comestibles.</p>
+					<h6 class="type-bold type-lg">¿Por qué CBD?</h6>
+					<p class="cbd-text">El CBD posee múltiples beneficios para el organismo.</p>
+				</div>
+			</div>
+		</div> -->
 
 <!-- INFORMACION -->
-<div id="informacion" class="containerInformacion Bg-ColorBgGreen mb-5">
-	<div class="containerAcerca m-1 p-1 d-flex flex-wrap Bg-ColorBgGreen">
-		<div class="containerInfo m-auto pl-4 col-11 col-lg-6">
-			<h6 class="text-center type-bold type-lg">¿Qué es el CBD?</h6>
-			<p>El CBD es una sustancia natural presente en la planta Cannabis Sativa. Se utiliza en la producción de aceites, cremas y comestibles.</p>
-		</div>
-		<div class="p-2 m-auto col-11 m-lg-0 col-lg-6">
-			<img src="../media/infoMobile1.jpg" srcset="../media/infoMobile1.jpg 768w, ../media/info1.jpg" alt="#" title="#">
-		</div>
-	</div>
-	<div class="containerAcerca m-1 mt-5 p-1 d-flex flex-wrap Bg-ColorBgGreen">
-		<div class="containerInfo m-auto pl-4 col-11 col-lg-6 order-lg-2">
-			<h6 class="text-center type-bold type-lg">¿Por qué CBD?</h6>
-			<p>El CBD posee múltiples beneficios para el organismo.</p>
-		</div>
-		<div class="p-1 m-auto col-11 m-lg-0 col-lg-6">
-			<img src="../media/infoMobile2.jpg" srcset="../media/infoMobile2.jpg 768w, ../media/info2.jpg" alt="#" title="#">
-		</div>
-	</div>
-</div>
 
-<!-- Recomendaciones -->
+		<div id="informacion" class="cbd-container d-flex justify-content-center align-items-center Bg-ColorBgGreen ">
+			<img src="./media/aceite.jpg" alt="Aceite informacion">
+			<div class="cbd-section-container d-flex flex-column justify-content-center align-items-center">
+				<div class="cbd-section">
+				<h6>Qué es el CBD?</h6>
+				<p class="cbd-text">El CBD es una sustancia natural presente en la planta Cannabis Sativa.<br> Se utiliza en la producción de aceites, cremas y comestibles.</p>
+				</div>
+				<div class="cbd-section">
+				<h6>Por qué CBD?</h6>
+				<p class="cbd-text">El CBD posee múltiples beneficios para el organismo.</p>
+				</div>
+			</div>
+		</div>
+		<div class="w-100 Bg-ColorBgGreen mb-5">
+			<div class="accordion Bg-ColorBgGreen" id="accordionExample">
 
-<div  class="Bg-ColorBgGreen ">
-	Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore mollitia veritatis odio accusamus ipsum architecto, amet dignissimos? Ut, voluptatum sequi voluptatibus ex, magnam suscipit molestiae obcaecati sit ducimus facilis quae?	
+				<div class="card w-100">
+					<div class="card-header" id="headingOne">
+						<h2 class="mb-0">
+						<button class="btn btn-beneficios d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+							<span>Alivia el estrés</span>
+							<i class="fas fa-plus"></i>
+						</button>
+						</h2>
+					</div>
+					<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+						<div class="card-body">
+							Some placeholder content for the first accordion panel. This panel is shown by default, thanks to the <code>.show</code> class.
+						</div>
+					</div>
+				</div>
 
-</div>
+				<div class="card w-100">
+					<div class="card-header" id="headingTwo">
+						<h2 class="mb-0">
+						<button class="btn btn-beneficios d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+							<span>Contribuye al buen descanso</span>
+							<i class="fas fa-plus"></i>
+						</button>
+						</h2>
+					</div>
+					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+						<div class="card-body">
+							Some placeholder content for the second accordion panel. This panel is hidden by default.
+						</div>
+					</div>
+				</div>
 
+				<div class="card w-100">
+					<div class="card-header" id="headingFord">
+						<h2 class="mb-0">
+						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+							<span>Combate radicales libres</span>
+							<i class="fas fa-plus"></i>
+						</button>
+						</h2>
+					</div>
+					<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+						<div class="card-body">
+							And lastly, the placeholder content for the third and final accordion panel. This panel is hidden by default.
+						</div>
+					</div>
+				</div>
+
+				<div class="card w-100">
+					<div class="card-header" id="headingFive">
+						<h2 class="mb-0">
+						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+							<span>Promueve la recuperación deportiva</span>
+							<i class="fas fa-plus"></i>
+						</button>
+						</h2>
+					</div>
+					<div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+						<div class="card-body">
+							And lastly, the placeholder content for the third and final accordion panel. This panel is hidden by default.
+						</div>
+					</div>
+				</div>
+
+				<div class="card w-100">
+					<div class="card-header" id="headingSix">
+						<h2 class="mb-0">
+						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+							<span>Combate la inflamación</span>
+							<i class="fas fa-plus"></i>
+						</button>
+						</h2>
+					</div>
+					<div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+						<div class="card-body">
+							And lastly, the placeholder content for the third and final accordion panel. This panel is hidden by default.
+						</div>
+					</div>
+				</div>
+
+				<div class="card w-100">
+					<div class="card-header" id="headingSeven">
+						<h2 class="mb-0">
+						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
+							<span>Alivia el dolor crónico</span>
+							<i class="fas fa-plus"></i>
+						</button>
+						</h2>
+					</div>
+					<div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
+						<div class="card-body">
+							And lastly, the placeholder content for the third and final accordion panel. This panel is hidden by default.
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>	
+
+<!-- Carousel -->
+		<div class="w-100 Bg-ColorBgGreen color-black">
+			<h2 class="titulo-carousel ">Qué opinan de nosotros?</h2>
+		</div>
+		<div id="carouselExampleControls" class="carousel slide Bg-ColorBgGreen color-black" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<span class="car-container">
+						<p class="texto-carousel">"El aceite me ayudó en situaciones de estrés y ansiedad"</p>
+					</span>
+				</div>
+				<div class="carousel-item">
+					<p class="texto-carousel">"Descanso muy bien y el dolor lumbar está por desaparecer por completo"</p>
+				</div>
+				<div class="carousel-item">
+					<p class="texto-carousel">"La crema es espectacular para las contracturas. Y lo mejor: todo es natural"</p>
+				</div>
+				<div class="carousel-item">
+					<p class="texto-carousel">"Mi mamá está muy conforme con los resultados. El unguento le alivió los dolores de manera natural"</p>
+				</div>
+				<div class="carousel-item">
+					<p class="texto-carousel">"Es increíble asumir que no estoy colmado de ansiedad y estrés. Hoy me siento sumamente positivo"</p>
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+			</a>
+		</div>
 <!-- Contacto -->
-		<div id="contacto" class="containerContactanos m-1 p-3 d-flex flex-wrap text-center Bg-ColorBgGreen">
-			<div class="m-auto p-1 col-11 m-lg-0 col-lg-6 order-1">
-				<form class="col-12 needs-validation" method="POST" action="email.php" novalidate>
+		<div id="contacto" class="d-flex mb-5 pt-1 pb-1 justify-content-center flex-wrap text-center Bg-ColorBgGreen W-100">
+			<div class="m-auto p-1 col-12 m-lg-0 col-lg-6">
+				<h3>DEJANOS TU MENSAJE</h3>
+				<div class="col-12">
 					<div>
 						<div class="form-group text-center">
 							<label for="nombre">Nombre:</label>
-							<input class="form-control border border-dark" type="text" placeholder="Tu nombre" id="nombre" required>
+							<input class="form-control border border-dark" type="text" placeholder="Tu nombre" id="formName" required>
 						</div>
 						<div class="form-group">
 							<label for="correo">Correo:</label>
-							<input class="form-control border border-dark" type="email" placeholder="Tu email" id="correo" required>
+							<input class="form-control border border-dark" type="email" placeholder="Tu email" id="formEmail" required>
 						</div>
 						<div class="form-group ">
 							<label for="textArea">Tu mensaje:</label>
-							<textarea class="form-control border border-dark" id="textArea" rows="3" placeholder="Dejanos tu mensaje." required></textarea>
-							<input type="hidden" name="campoOculto" value="#">
+							<textarea class="form-control border border-dark" id="message" rows="3" placeholder="Dejanos tu mensaje." required></textarea>
 						</div>
 					</div>
 					<div class="col-12">
-						<button class="btn border border-dark miBoton" type="submit" data-toggle="modal" data-target="#exampleModal">Enviar</button>
+						<button onclick="sendMail()" type="submit" class="btn border border-dark miBoton" data-toggle="modal" data-target="#exampleModal">Enviar</button>
 					</div>
-					<div>
-						<button type="button" class="btn border border-dark miBoton" data-toggle="modal" data-target="#exampleModal">Enviar</button>
-					</div>
-				</form>			
-			</div>
-			<div class="containerInfo m-auto col-11 col-lg-6 order-2">
-				<p class="">No te quedes con las dudas, déjanos tu mensaje.</p>
-				<i class="flaticon-letter"> aceitesterapeuticosroyal@gmail.com</i>
+				</div>			
 			</div>
 		</div>
 
 <!-- Modal -->
 		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
-				<div class="modal-content border border-dark">
+				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h5 class="modal-title" id="exampleModalLabel">Mensaje Enviado</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
 					</div>
-					<div class="modal-body text-center type-md text-success">
-						¡Gracias por tu mensaje!
+					<div class="modal-body">
+						¡Gracias por escribirnos! Le responderemos a la brevedad.
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn" data-dismiss="modal">Cerrar</button>
+						<button type="button" class="btn border border-dark miBoton" data-dismiss="modal">Cerrar</button>
 					</div>
-				</div>
+				</div>	
 			</div>
 		</div>
 	</section>
-
+<!-- Footer -->
+	<footer>
+		<div class="w-100 footer-container d-flex justify-content-around align-items-center p-4 Bg-ColorBgGreen">
+			<a href="index.html"><img class="logo-footer" src="media/logo.jpg" alt="AceitesCBD" title="AceitesCBD"></a>
+			<a class="nav-link" href="https://www.instagram.com/aceitesroyal.cbd/?hl=es-la" target="_blank" title="Aceites CBD" rel="noreferrer"><i class="fab fa-instagram type-bold"></i><strong> @aceitesroyal.cbd</strong></a>
+		</div>
+	</footer>
 <!-- ---------script--------- -->
 	<script  src="node_modules/jquery/dist/jquery.js"></script>
 	<script  src="node_modules/popper.js/dist/umd/popper.js"></script>
