--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				</div>
 
 				<div class="card w-100">
-					<div class="card-header" id="headingFord">
+					<div class="card-header" id="headingThree">
 						<h2 class="mb-0">
 						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 							<span>Combate radicales libres</span>
@@ -137,7 +137,7 @@
 				</div>
 
 				<div class="card w-100">
-					<div class="card-header" id="headingFive">
+					<div class="card-header" id="headingFour">
 						<h2 class="mb-0">
 						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
 							<span>Promueve la recuperación deportiva</span>
@@ -153,7 +153,7 @@
 				</div>
 
 				<div class="card w-100">
-					<div class="card-header" id="headingSix">
+					<div class="card-header" id="headingFive">
 						<h2 class="mb-0">
 						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
 							<span>Combate la inflamación</span>
@@ -169,7 +169,7 @@
 				</div>
 
 				<div class="card w-100">
-					<div class="card-header" id="headingSeven">
+					<div class="card-header" id="headingSixs">
 						<h2 class="mb-0">
 						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
 							<span>Alivia el dolor crónico</span>
