--- a/productos.html
+++ b/productos.html
@@ -45,8 +45,20 @@
 <!-- SECTION -->
 	<section class="p-1">
         <div class="containerPromos mb-5 text-center">
-			<div id="exibidorProductos" class="row justify-content-around mb-3"></div>
+			<div id="exibidorProductos" class="d-inline row justify-content-around mb-3"></div>
 		</div>
+		
+
+
+
+
+
+
+
+
+
+
+
 
 		<!-- Contacto -->
 		<div id="contacto" class="d-flex mb-5 pt-1 pb-1 justify-content-center flex-wrap text-center Bg-ColorBgGreen W-100">
