--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<img src="./media/aceite.jpg" alt="Aceite informacion">
 			<div class="cbd-section-container d-flex flex-column justify-content-center align-items-center">
 				<div class="cbd-section">
-				<h6>Qué es el CBD?</h6>
+				<h6>¿Qué es el Cannabidiol(CBD)?</h6>
 				<p class="cbd-text">El CBD es una sustancia natural presente en la planta Cannabis Sativa.<br> Se utiliza en la producción de aceites, cremas y comestibles.</p>
 				</div>
 				<div class="cbd-section">
@@ -92,14 +92,23 @@
 					<div class="card-header" id="headingOne">
 						<h2 class="mb-0">
 						<button class="btn btn-beneficios d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-							<span>Alivia el estrés</span>
+							<span>Beneficios del CBD.</span>
 							<i class="fas fa-plus"></i>
 						</button>
 						</h2>
 					</div>
 					<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-						<div class="card-body">
-							Some placeholder content for the first accordion panel. This panel is shown by default, thanks to the <code>.show</code> class.
+						<div class="card-body type-md pl-5">
+							<ul>
+								<li>Antidepresivo</li>
+								<li>Trastornos de bipolaridad</li>
+								<li>Regula dolores crónicos</li>
+								<li>Estimula el crecimiento óseo</li>
+								<li>Suprime Nauseas y vómitos</li>
+								<li>Ayuda a controlar la epilepsia</li>
+								<li>Reducir el riesgo de obstrucción de arterias</li>
+								<li>Alivia las migrañas</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -108,14 +117,21 @@
 					<div class="card-header" id="headingTwo">
 						<h2 class="mb-0">
 						<button class="btn btn-beneficios d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-							<span>Contribuye al buen descanso</span>
+							<span>¿Cómo colocar el CBD debajo de la lengua?</span>
 							<i class="fas fa-plus"></i>
 						</button>
 						</h2>
 					</div>
 					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-						<div class="card-body">
-							Some placeholder content for the second accordion panel. This panel is hidden by default.
+						<div class="card-body type-md pl-5">
+							<span class="color-green type-sm">Se recomienda no comer, beber o fumar 5 minutos antes y después de la aplicacion.</span>	
+							<ul>
+								<li>Utilice un espejo para facilitar la colocacíon.</li>
+								<li>Coloque las gotas de aceite debajo de la lengua.</li>
+								<li>Mantengalo debajo de la lengua por 1 o 2 minutos.</li>
+								<li>Luego trague el resto.</li>
+								<span class="type-sm">El CBD permanece activo en el cuerpo hasta 6 horas.</span>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -124,14 +140,20 @@
 					<div class="card-header" id="headingThree">
 						<h2 class="mb-0">
 						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-							<span>Combate radicales libres</span>
+							<span>CBD en mascotas</span>
 							<i class="fas fa-plus"></i>
 						</button>
 						</h2>
 					</div>
 					<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-						<div class="card-body">
-							And lastly, the placeholder content for the third and final accordion panel. This panel is hidden by default.
+						<div class="card-body type-md pl-5">
+							<span class="type-sm">El CBD en mascotas puede ayudar a mejorar su calidad de vida, suele utilizarce como apoyo nutricional en:</span>
+							<ul>
+								<li>Salud articular</li>
+								<li>Salud Neurologica</li>
+								<li>Comportamiento</li>
+								<li>Salud digestiva y más!</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -140,14 +162,18 @@
 					<div class="card-header" id="headingFour">
 						<h2 class="mb-0">
 						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
-							<span>Promueve la recuperación deportiva</span>
-							<i class="fas fa-plus"></i>
+							<span>¿Como Compro?</span>
+							<i class="fas fa-plus "></i>
 						</button>
 						</h2>
 					</div>
 					<div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-						<div class="card-body">
-							And lastly, the placeholder content for the third and final accordion panel. This panel is hidden by default.
+						<div class="card-body type-md pl-5">
+							<ul >
+								<li>Nos envias un msj por privado.</li>
+								<li>Te enviamos la lista de precios</li>
+								<li>Coordinamos forma de pago y envío</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -156,14 +182,18 @@
 					<div class="card-header" id="headingFive">
 						<h2 class="mb-0">
 						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
-							<span>Combate la inflamación</span>
+							<span>Medios de pago.</span>
 							<i class="fas fa-plus"></i>
 						</button>
 						</h2>
 					</div>
 					<div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
-						<div class="card-body">
-							And lastly, the placeholder content for the third and final accordion panel. This panel is hidden by default.
+						<div class="card-body type-md pl-5">
+							<ul>
+								<li>Transferencia Bancaria</li>
+								<li>Mercado Pago (envío de dinero con débito - con credito 15% de recargo)</li>
+								<li>Efectivo en rapipago/pagofacil o retirando en persona</li>
+							</ul>						
 						</div>
 					</div>
 				</div>
@@ -172,14 +202,18 @@
 					<div class="card-header" id="headingSixs">
 						<h2 class="mb-0">
 						<button class="btn btn-beneficios collapsed d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
-							<span>Alivia el dolor crónico</span>
+							<span>¿Cuando recibo mi producto?</span>
 							<i class="fas fa-plus"></i>
 						</button>
 						</h2>
 					</div>
 					<div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
-						<div class="card-body">
-							And lastly, the placeholder content for the third and final accordion panel. This panel is hidden by default.
+						<div class="card-body type-md pl-5">
+							<span class="color-green">Una vez realizado el pago:</span>	
+							<ul>
+								<li>Los envíos por moto se hacen dentro de los 3 días posteriores a la compra (No se considera días de lluvia)</li>
+								<li>Por correo andreani se despachan dentro de los 3 días posteriores a la compra (No se considera domingos ni feriados)</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -212,12 +246,12 @@
 				</div>
 			</div>
 			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
+				<i class="fas fa-chevron-left type-md color-black"></i>
+				<span class="sr-only">Previous</span>
 			</a>
 			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
+				<i class="fas fa-chevron-right type-md color-black"></i>
+				<span class="sr-only">Next</span>
 			</a>
 		</div>
 <!-- Contacto -->
