--- a/index.html
+++ b/index.html
@@ -56,35 +56,21 @@
 		</div>
 
 <!-- INFORMACION MIA-->
-		<!-- <div class="cbd-container Bg-ColorBgGreen">
+		<div class="cbd-container Bg-ColorBgGreen">
 			<div class="m-1 p-1 d-flex flex-wrap Bg-ColorBgGreen">
-				<div class="p-2 m-auto col-11 m-lg-0 col-lg-5">
-					<img src="media/infoMobile1.jpg" srcset="media/infoMobile1.jpg 768w, media/info1.jpg" alt="Aceite informacion" title="Aceite informacion">
+				<div class="p-2 col-12 col-md-6">
+					<img src="media/info1.jpg"  alt="Aceite informacion" title="Aceite informacion">
 				</div>
-				<div class="cbd-section-container m-auto pl-4 col-11 col-lg-5">
-					<h6 class="type-bold type-lg">¿Qué es el CBD?</h6>
+				<div class="cbd-section-container m-auto pl-4 col-12 col-md-6">
+					<h6 class="type-bold type-lg">¿Qué es el Cannabidiol(CBD)?</h6>
 					<p class="cbd-text">El CBD es una sustancia natural presente en la planta Cannabis Sativa. Se utiliza en la producción de aceites, cremas y comestibles.</p>
 					<h6 class="type-bold type-lg">¿Por qué CBD?</h6>
 					<p class="cbd-text">El CBD posee múltiples beneficios para el organismo.</p>
 				</div>
 			</div>
-		</div> -->
+		</div>
 
 <!-- INFORMACION -->
-
-		<div id="informacion" class="cbd-container d-flex justify-content-center align-items-center Bg-ColorBgGreen ">
-			<img src="./media/aceite.jpg" alt="Aceite informacion">
-			<div class="cbd-section-container d-flex flex-column justify-content-center align-items-center">
-				<div class="cbd-section">
-				<h6>¿Qué es el Cannabidiol(CBD)?</h6>
-				<p class="cbd-text">El CBD es una sustancia natural presente en la planta Cannabis Sativa.<br> Se utiliza en la producción de aceites, cremas y comestibles.</p>
-				</div>
-				<div class="cbd-section">
-				<h6>Por qué CBD?</h6>
-				<p class="cbd-text">El CBD posee múltiples beneficios para el organismo.</p>
-				</div>
-			</div>
-		</div>
 		<div class="w-100 Bg-ColorBgGreen mb-5">
 			<div class="accordion Bg-ColorBgGreen" id="accordionExample">
 
@@ -117,7 +103,7 @@
 					<div class="card-header" id="headingTwo">
 						<h2 class="mb-0">
 						<button class="btn btn-beneficios d-flex justify-content-between text-decoration-none w-100" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-							<span>¿Cómo colocar el CBD debajo de la lengua?</span>
+							<span class="text-left">¿Cómo colocar el CBD debajo de la lengua?</span>
 							<i class="fas fa-plus"></i>
 						</button>
 						</h2>
