wpp, destacados y info1

--- a/index.html
+++ b/index.html
@@ -265,6 +265,14 @@
 				</div>			
 			</div>
 		</div>
+<!-- Aside -->
+<aside>
+	<div class="aside animate__animated animate__bounceInDown">
+		<ul class="type-lg">
+			<li><a href="https://wa.me/541121825572/?text=¡Hola!" target="_blank" title="Aceites CBD whatsapp" rel="noreferrer"><i class="fab fa-whatsapp asideIcon"></i></a></li>
+		</ul>
+	</div>
+</aside>
 
 <!-- Modal -->
 		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
