--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		</div>
 
 <!-- BOTON LISTA DE PRECIOS -->
-		<div class="containerPromos  text-center">
+		<div class="text-center">
 			<div class="w-100 mb-5 col-12 d-flex justify-content-center">
 				<a target="_blank" class="btn border border-dark miBoton" href="https://docs.google.com/document/d/1wbkMm2IE92D5BCwvFhGNzsxhf6XtSofC8OpyTogJLT0/edit?usp=sharing">VER LISTA DE PRECIOS</a>
 			</div>
