--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</div>
 
 <!-- INFORMACION -->
-		<div class="cbd-container Bg-ColorBgGreen">
+		<div id="informacion" class="cbd-container Bg-ColorBgGreen">
 			<div class="m-1 p-1 d-flex flex-wrap Bg-ColorBgGreen">
 				<div class="p-2 col-12 col-md-6">
 					<img src="media/info1.jpg"  alt="Aceite informacion" title="Aceite informacion">
