Arreglo de textos

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<img src="media/info1.jpg"  alt="Aceite informacion" title="Aceite informacion">
 				</div>
 				<div class="cbd-section-container m-auto pl-4 col-12 col-md-6">
-					<h6 class="type-bold type-lg">¿Qué es el Cannabidiol(CBD)?</h6>
+					<h6 class="type-bold type-lg">¿Qué es el Cannabidiol (CBD)?</h6>
 					<p class="cbd-text">El CBD es una sustancia natural presente en la planta Cannabis Sativa. Se utiliza en la producción de aceites, cremas y comestibles.</p>
 					<h6 class="type-bold type-lg">¿Por qué CBD?</h6>
 					<p class="cbd-text">El CBD posee múltiples beneficios para el organismo.</p>
@@ -114,14 +114,14 @@
 					<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
 						<div class="card-body type-md pl-5">
 							<ul>
-								<li>Antidepresivo</li>
-								<li>Trastornos de bipolaridad</li>
+								<li>Es antidepresivo</li>
+								<li>Alivia trastornos de bipolaridad</li>
 								<li>Regula dolores crónicos</li>
 								<li>Estimula el crecimiento óseo</li>
-								<li>Suprime Nauseas y vómitos</li>
+								<li>Suprime náuseas y vómitos</li>
 								<li>Ayuda a controlar la epilepsia</li>
-								<li>Reducir el riesgo de obstrucción de arterias</li>
-								<li>Alivia las migrañas</li>
+								<li>Reduce el riesgo de obstrucción de arterias</li>
+								<li>Alivia migrañas</li>
 							</ul>
 						</div>
 					</div>
@@ -138,13 +138,13 @@
 					</div>
 					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
 						<div class="card-body type-md pl-5">
-							<span class="color-green type-sm">Se recomienda no comer, beber o fumar 5 minutos antes y después de la aplicacion.</span>	
+							<span class="color-green type-sm">*Se recomienda no comer, beber o fumar 5 minutos antes y después de la aplicación.</span>	
 							<ul>
-								<li>Utilice un espejo para facilitar la colocacíon.</li>
-								<li>Coloque las gotas de aceite debajo de la lengua.</li>
-								<li>Mantengalo debajo de la lengua por 1 o 2 minutos.</li>
-								<li>Luego trague el resto.</li>
-								<span class="type-sm">El CBD permanece activo en el cuerpo hasta 6 horas.</span>
+								<li>Ubicarse frente a un espejo para facilitar la colocación</li>
+								<li>Colocar las gotas de aceite debajo de la lengua</li>
+								<li>Colocar las gotas de aceite debajo de la lengua</li>
+								<li>Luego, tragar el resto.</li>
+								<span class="color-green type-sm">* El CBD permanece activo en el cuerpo hasta 6 horas.</span>
 							</ul>
 						</div>
 					</div>
@@ -161,12 +161,12 @@
 					</div>
 					<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
 						<div class="card-body type-md pl-5">
-							<span class="type-sm">El CBD en mascotas puede ayudar a mejorar su calidad de vida, suele utilizarce como apoyo nutricional en:</span>
+							<span class="type-sm">El CBD en mascotas puede ayudar a mejorar su calidad de vida, suele utilizarse como apoyo nutricional en:</span>
 							<ul>
 								<li>Salud articular</li>
-								<li>Salud Neurologica</li>
+								<li>Salud neurológica</li>
 								<li>Comportamiento</li>
-								<li>Salud digestiva y más!</li>
+								<li>Salud digestiva ¡y más!</li>
 							</ul>
 						</div>
 					</div>
@@ -184,9 +184,9 @@
 					<div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
 						<div class="card-body type-md pl-5">
 							<ul >
-								<li>Nos envias un msj por privado.</li>
-								<li>Te enviamos la lista de precios</li>
-								<li>Coordinamos forma de pago y envío</li>
+								<li>Nos envias un mensaje privado</li>
+								<li>Te enviamos nuestra lista de precios</li>
+								<li>Coordinamos la forma de pago y el envío</li>
 							</ul>
 						</div>
 					</div>
@@ -204,9 +204,10 @@
 					<div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
 						<div class="card-body type-md pl-5">
 							<ul>
-								<li>Transferencia Bancaria</li>
-								<li>Mercado Pago (envío de dinero con débito - con credito 15% de recargo)</li>
-								<li>Efectivo en rapipago/pagofacil o retirando en persona</li>
+								<li>Transferencia bancaria</li>
+								<li>Envío de dinero por Mercado Pago (débito y crédito 15% de recargo)</li>
+								<li>Efectivo mediante Rapipago  o Pagofácil</li>
+								<li>Efectivo retirando personalmente</li>
 							</ul>						
 						</div>
 					</div>
@@ -225,8 +226,8 @@
 						<div class="card-body type-md pl-5">
 							<span class="color-green">Una vez realizado el pago:</span>	
 							<ul>
-								<li>Los envíos por moto se hacen dentro de los 3 días posteriores a la compra (No se considera días de lluvia)</li>
-								<li>Por correo andreani se despachan dentro de los 3 días posteriores a la compra (No se considera domingos ni feriados)</li>
+								<li>Los envíos por moto se hacen dentro de los 3 días posteriores a la compra (no se consideran días de lluvia)</li>
+								<li>Por correo Andreani se despachan dentro de los 3 días hábiles posteriores a la compra (no se consideran domingos ni feriados)</li>
 							</ul>
 						</div>
 					</div>
